[fix] - bg animation position on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -33,6 +33,11 @@ body {
   overflow-x: hidden;
 }
 
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 body::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
